# gimoji

./: .commitlintrc.mjs  .gitignore  .lefthook.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  emojis.json  index.html  justfile  package.json  release-plz.toml  styles.css
.cargo/: config
.github/: renovate.json
.github/workflows/: commitlint.yml  deploy-pages.yml  deploy-web.yml  npm-publish.yml  release.yml  rust.yml  update-emojis.yml
crates/gimoji/: Cargo.toml
crates/gimoji-core/: Cargo.toml  build.rs
crates/gimoji-core/src/: app.rs  emoji.rs  lib.rs  search_entry.rs  selection_view.rs  toast.rs
crates/gimoji-web/: Cargo.toml
crates/gimoji-web/.cargo/: config.toml
crates/gimoji-web/assets/fonts/: NOTICE
crates/gimoji-web/src/: clipboard.rs  color_scheme.rs  emoji_overlay.rs  input.rs  lib.rs
crates/gimoji-web/web/: index.html  style.css
crates/gimoji/src/: clipboard.rs  event_to_action.rs  main.rs  terminal.rs
docs/superpowers/specs/: 2026-06-06-web-native-consolidation-design.md
scripts/: .gitignore  Cargo.toml  README.md  generate-web.sh  serve-web.sh
scripts/src/: main.rs
src/: colors.rs  emoji.rs  emojis.rs  main.rs  search_entry.rs  selection_view.rs  terminal.rs
