[package]
name = "gimoji"
description = "Easily add emojis to your git commit messages 🎉"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
repository = "https://github.com/zeenix/gimoji"
keywords = ["CLI", "git", "emoji"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
ratatui = "0.26.2"
regex = { version = "1.10.4", default-features = false, features = [
    "std",
    "perf",
    "unicode-case",
] }
arboard = { version = "3.4.0", default-features = false, features = [
    "wayland-data-control",
] }
terminal-light = "1.4.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", default-features = false, features = ["process"] }

[build-dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
databake = { version = "0.1.7", features = ["derive"] }

[profile.release]
lto = "fat"
