[workspace]
members = ["crates/gimoji-core", "crates/gimoji"]
resolver = "2"
exclude = ["scripts"]

[workspace.package]
version = "1.4.0"
edition = "2021"
license = "MIT"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
repository = "https://github.com/zeenix/gimoji"

[profile.release]
lto = "fat"
codegen-units = 1
