[package]
name = "update-emojis"
version = "0.1.0"
edition = "2021"
description = "Utility to update emoji database from gitmoji upstream"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]

[[bin]]
name = "update-emojis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"