[package]
name = "update-emojis"
version = "0.1.0"
edition = "2021"
description = "Utility to update emoji database from gitmoji upstream"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]

[[bin]]
name = "update-emojis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
] }
ureq = { version = "3.0", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
