[package]
name = "gimoji-core"
description = "Core picker UI and emoji database shared by gimoji's native and web frontends"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ratatui = { version = "0.30.1", default-features = false }

[build-dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
databake = { version = "0.2.1", features = ["derive"] }
