[package]
name = "gimoji-web"
description = "Browser frontend for the gimoji emoji picker (WASM)"
version = "1.4.0"
edition = "2021"
license = "MIT"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
repository = "https://github.com/zeenix/gimoji"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1

# Size-optimized profile for the WebAssembly bundle.
# Use with `--profile web`.
[profile.web]
inherits = "release"
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
gimoji-core = { version = "1.4.0", path = "../gimoji-core" }
ratatui = { version = "0.30.1", default-features = false }
ratatui-wgpu = { version = "0.5.0", default-features = false, features = ["web"] }
wgpu = "28"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Element",
    "CssStyleDeclaration",
    "KeyboardEvent",
    "PointerEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Navigator",
    "Clipboard",
    "Performance",
    "EventTarget",
    "Event",
    "DomRect",
    "console",
] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.72"
